k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx ## This should match the ingress class used by your Ingress Controller
  rules:
  - host: "go-web-app.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: go-web-app
            port:
              number: 8080
